eliminates the root view

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,79 +1,1 @@
-<div class="hero-unit">
-  <h2>OSU Publication Resources</h2>
-
-
-  <p style="font-size:medium">Oregon State University Libraries' consolidated publications database.</p>
-
-  <hr style="color:#000;background-color:#000;border-color:#000"/>
-
-  <h5 style="padding-bottom:10px;text-align:left"><%=Settings.SULPUB_ID.PUB_URI %>/harvest?format=json</h5>
-  <p class="sultext">Harvests publications for OSU in the past four weeks.</p>
-  <table class="table table-striped">
-    <tbody>
-    <tr>
-      <td>POST</td>
-      <td>Harvests publications for OSU.</td>
-    </tr>
-    <tbody>
-  </table>
-
-
-  <h5 style="padding-bottom:10px;text-align:left;"><%=Settings.SULPUB_ID.PUB_URI %>/{sulPubId}</h5>
-  <p class="sultext">View, update, or delete a single publication resource.</p>
-  <table class="table table-striped">
-    <tbody>
-    <tr>
-      <td>HEAD</td>
-      <td>Returns same as GET, but without body.</td>
-    </tr>
-    <tr>
-      <td>OPTIONS</td>
-      <td>Lists available methods.</td>
-    </tr>
-    <tr>
-      <td>GET</td>
-      <td>Returns BibJSON record for the publication.</td>
-    </tr>
-    <tr>
-      <td>PUT</td>
-      <td>Updates publication record.</td>
-    </tr>
-    <tr>
-      <td>DELETE</td>
-      <td>Deletes publication record.</td>
-    </tr>
-    <tbody>
-  </table>
-
-
-  <h5 style="padding-bottom:10px;text-align:left"><%=Settings.SULPUB_ID.PUB_URI %>?changedSince={YYYY-MM-DDTHH:MM:SSZ}&capProfileId={capId}&page={resultpage}&per={results_per_page}</h5>
-  <p class="sultext">Returns all publications created or modified since the given date.  If the profile id is specified then only publications for that id are returned.</p>
-  <table class="table table-striped">
-    <tbody>
-    <tr>
-      <td>HEAD</td>
-      <td>Returns same as GET, but without body.</td>
-    </tr>
-    <tr>
-      <td>OPTIONS</td>
-      <td>Lists available methods.</td>
-    </tr>
-    <tr>
-      <td>GET</td>
-      <td>Returns BibJSON record for the publication.</td>
-    </tr>
-    <tbody>
-  </table>
-
-
-  <h5 style="padding-bottom:10px;text-align:left"><%=Settings.SULPUB_ID.AUTHOR_URI %>/{capId}/harvest?format=json&altNames={false}</h5>
-  <p class="sultext">Harvests publications for an Author.</p>
-  <table class="table table-striped">
-    <tbody>
-    <tr>
-      <td>POST</td>
-      <td>Harvests publications for an Author.</td>
-    </tr>
-    <tbody>
-  </table>
-</div>
+Home#index
