adds CAS and local user login functionality

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -11,3 +11,5 @@ $error-red-light: #f8d7da;
 $bs-gray-dark: #343a40;
 $bs-gray-light: rgba(0, 0, 0, 0.125);
 $bs-orange: #f0ad4e;
+$success-green-dark: #2fab29;
+$success-green-light: #ddf8d7;
