--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,9 @@
 @import "bootstrap";
 @import "variables";
 @import "navbar";
+@import "flash_messages";
+@import "new_user_session";
+
+body > .container {
+  padding-top: 25px;
+}
