--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -7,12 +7,14 @@
   .collapse.navbar-collapse#bs-example-navbar-collapse-1
     %ul.nav.navbar-nav.ml-auto
       %li.nav-item.welcome
-        %p
-          Logged in as
-          = current_user.username
+        - if user_signed_in?
+          %p
+            Logged in as
+            = current_user.username
       %li.nav-item.link= link_to 'Publications', publications_path, class: 'nav-link'
-      %li.nav-item= link_to 'Admin', rails_admin_path, class: 'nav-link faded'
       - if user_signed_in? && current_user.admin?
+        %li.nav-item= link_to 'Admin', rails_admin_path, class: 'nav-link faded'
+      - if user_signed_in?
         %li.nav-item= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'nav-link faded'
   #sub_nav
     %h1 Easy Deposit @ Oregon State University Libraries and Press
