adds a simple publications listing page with some basic style

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 @import "navbar";
 @import "flash_messages";
 @import "new_user_session";
+@import "publications";
 
 body > .container {
   padding-top: 25px;
