--- a/app/assets/stylesheets/publications.scss
+++ b/app/assets/stylesheets/publications.scss
@@ -1,48 +1,53 @@
-ul.wos-records {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  > li {
-    padding: 10px 0px;
-    margin-bottom: 25px;
-    border: solid 1px #aaa;
-    border-radius: 5px;
-    h1,
-    .fingerprint {
-      margin-left: 10px;
+.publications {
+  h1 {
+    margin-bottom: 0;
+    line-height: 1;
+    a {
+      text-decoration: underline;
     }
-    .fingerprint {
-      span {
-        font-size: 0.8rem;
-        color: #aaa;
-      }
-    }
-    table {
-      font-size: 0.75rem;
-      thead {
-        tr {
-          th {
-            padding: 0.25rem;
-          }
-        }
-      }
-      tbody {
-        tr {
-          td,
-          th {
-            padding: 0.25rem;
-          }
-          td ul {
-            margin: 0;
-            padding-left: 5px;
-            list-style-type: none;
-          }
-        }
-      }
+  }
+
+  ul.wos-records {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    > li {
+      padding: 10px 0px;
+      margin-bottom: 25px;
     }
   }
 
   .text-align-right {
     text-align: right;
+  }
+
+  .fingerprint {
+    span {
+      font-size: 0.8rem;
+      color: #aaa;
+    }
+  }
+  table {
+    font-size: 0.75rem;
+    thead {
+      tr {
+        th {
+          padding: 0.25rem;
+        }
+      }
+    }
+    tbody {
+      tr {
+        td,
+        th {
+          padding: 0.25rem;
+        }
+        td ul {
+          margin: 0;
+          padding-left: 5px;
+          list-style-type: none;
+        }
+      }
+    }
   }
 }
