--- a/app/views/publications/edit.html.haml
+++ b/app/views/publications/edit.html.haml
@@ -13,3 +13,4 @@
       - unless @publication.pub_at
         = render 'file_form'
       = render 'file_table'
+      = render 'jobs', r: @publication
