--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import "flash_messages";
 @import "new_user_session";
 @import "publications";
+@import "collapsible";
 
 body > .container-fluid {
   padding-top: 25px;
