--- a/app/views/publications/_file_table.haml
+++ b/app/views/publications/_file_table.haml
@@ -3,7 +3,7 @@
     %tbody
       - @publication.publication_files.each do |f|
         %tr
-          %th{scope: 'row'}=f.blob.filename
-          %td= link_to "Delete", publication_delete_file_path(@wos_record.uid, f.id), method: :delete, data: { confirm: "Are you sure you want to delete this file?" }
+          %th.align-items-center{scope: 'row'}=link_to(f.blob.filename, url_for(f), target: '_blank')
+          %td.align-items-center= link_to "Delete", publication_delete_file_path(@wos_record.uid, f.id), method: :delete, class: 'btn btn-danger btn-sm', data: { confirm: "Are you sure you want to delete this file?" }
 - else
-  %h5 No files have been attached to this work.
+  .bg-danger.text-light.no-files-attached This work cannot be published until the appropriate file(s) have been attached.
