--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %title= full_title(yield(:title))
+    %link{ href: "https://fonts.googleapis.com/icon?family=Material+Icons", rel: "stylesheet" }
     = stylesheet_link_tag "application", media: "all"
     = javascript_include_tag "application"
     = csrf_meta_tags
