--- a/app/views/publications/_jobs.html.haml
+++ b/app/views/publications/_jobs.html.haml
@@ -7,12 +7,15 @@
     .collapsible-content
       .collapsible-inner
         - @publication.jobs.order(updated_at: :desc).each do |j|
-          .job-row.container
+          .job-row.container{ class: "#{j.restartable ? 'restartable bg-danger text-white' : ''}" }
             .row.justify-content-end
-              .col.job-name= j[:name]
-              .align-self-end
-                - if j.user || j.cas_user
-                  .badge.badge-primary=j.user.present? ? j.user.email : j.cas_user.email
-                .badge{class: "badge-#{j.status_class}"}=j[:status].humanize
-            .row
-              .col= "#{j[:updated_at]} : #{j[:message]}"
+              .col
+                .job-name= j[:name]
+                = "#{j[:updated_at]} : #{j[:message]}"
+              .job-icons
+                - if j.restartable
+                  .material-icons.bg-danger.text-white.restart= link_to "cached", publication_restart_job_path(@publication, j)
+                - else
+                  - if j.user || j.cas_user
+                    .badge.badge-primary=j.user.present? ? j.user.email : j.cas_user.email
+                  .material-icons{class: "text-#{j.get_status[:class]}"}= j.get_status[:icon]
