administrator datatable for application-wide jobs

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,7 @@
 @import "new_user_session";
 @import "publications";
 @import "collapsible";
+@import "jobs_table";
 
 body > .container-fluid {
   padding-top: 25px;
