--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
   background: $orange;
-  padding: 0 0 26px 0;
+  padding: 0 0 26px 0 !important;
   .logo {
     transition: all 0.75s 0.25s;
     padding: 3px;
