--- a/app/views/home/_jobs_table.haml
+++ b/app/views/home/_jobs_table.haml
@@ -31,6 +31,6 @@
         %td.message= j[:message]
         %td.text-center
           - if j.restartable
-            .material-icons.bg-danger.text-white.restart= link_to "cached", publication_restart_job_path(j.publication, j)
+            .material-icons.bg-danger.text-white.restart{'data-toggle' => 'tooltip', 'data-placement' => 'top', title: t('tooltip.restart') }= link_to "cached", publication_restart_job_path(j.publication, j)
           - else
             .material-icons{class: "text-#{j.get_status[:class]}"}= j.get_status[:icon]
