updates homecontroller to render relative to user

--- a/app/assets/stylesheets/publications.scss
+++ b/app/assets/stylesheets/publications.scss
@@ -21,6 +21,11 @@
     text-align: right;
   }
 
+  .published {
+    font-size: 1.2rem;
+    font-weight: bold;
+  }
+
   .fingerprint {
     span {
       font-size: 0.8rem;
