--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,1 +1,7 @@
-Home#index
+%script{ src: 'https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js'}
+%script{ src: 'https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js'}
+%link{ href: 'https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css', rel: 'stylesheet' }
+%link{ href: 'https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css', rel: 'stylesheet' }
+
+= render 'publications/publications_table' if @publications
+= render 'jobs_table' if @jobs
