--- a/app/views/publications/index.html.haml
+++ b/app/views/publications/index.html.haml
@@ -1,5 +1,1 @@
-.publications
-  %ul.wos-records
-    - @wos_records.each do |r|
-      %li
-        = render 'record', r: r
+= render 'publications_table'
