--- a/app/views/publications/_record.html.haml
+++ b/app/views/publications/_record.html.haml
@@ -6,8 +6,11 @@
   %span (fingerprint)
   %span=r[:source_fingerprint]
 .published
-  %span Published:
-  %span=r[:pub_at] || 'Not yet published to repository.'
+  - if @publication
+    %span= "Published: #{@publication[:pub_at] || 'Not yet published to repository.'}"
+    - if @publication[:pub_url]
+      %br
+      %a{href: @publication[:pub_url], target: '_blank'}= @publication[:pub_url]
 - unless r.publication
   %i No publication record created.
 - else
