--- a/app/views/publications/edit.html.haml
+++ b/app/views/publications/edit.html.haml
@@ -1,7 +1,7 @@
 .publications
   - if @publication.errors.any?
-    .row
-      #error_explanation.alert.alert-danger.col.col-12{role: 'alert'}
+    .row.justify-content-center
+      #error_explanation.alert.alert-danger.col.col-10{role: 'alert'}
         %h4= "#{pluralize(@publication.errors.count, "error")} prohibited this from being saved:"
         %ul
           - @publication.errors.full_messages.each do |message|
@@ -10,7 +10,7 @@
     .col.col-12.col-lg-6
       = render 'record', r: @wos_record
     .col.col-12.col-lg-6
-      - unless @publication.pub_at
-        = render 'file_form'
-      = render 'file_table'
-      = render 'jobs', r: @publication
+      - if @publication.ready_to_publish?
+        = render 'publish_button'
+      = render 'attached_files'
+      = render 'jobs'
