--- a/app/views/publications/_publish_button.html.haml
+++ b/app/views/publications/_publish_button.html.haml
@@ -1,5 +1,5 @@
 .row.justify-content-center
-  .btn.btn-success.col-3.publish{ 'data-toggle' => 'modal', 'data-target' => '#publish_modal_center' }
+  .btn.btn-success.col-3.col-md-5.publish{ 'data-toggle' => 'modal', 'data-target' => '#publish_modal_center' }
     %i.material-icons backup
     Publish
   #publish_modal_center.modal.fade{tabindex: '-1', role: 'dialog', 'aria-labelledby' => 'publish_modal_center_title', 'aria-hidden' => 'true'}
