--- a/app/views/publications/_attached_files.html.haml
+++ b/app/views/publications/_attached_files.html.haml
@@ -1,4 +1,4 @@
-%h2 Attach Files
-- unless @publication.ready_to_publish?
+%h2 Attached Files
+- if @publication.ready_to_publish?
   = render 'file_form'
 = render 'file_table'
