--- a/app/assets/stylesheets/flash_messages.scss
+++ b/app/assets/stylesheets/flash_messages.scss
@@ -9,3 +9,7 @@
   color: $success-green-dark;
   background-color: $success-green-light;
 }
+.alert-warn {
+  color: $warn-yellow-dark;
+  background-color: $warn-yellow-light;
+}
