--- a/app/views/home/_jobs_table.haml
+++ b/app/views/home/_jobs_table.haml
@@ -28,7 +28,7 @@
             .badge.badge-primary=j.user.present? ? j.user.email : j.cas_user.email
         %td.message= j[:message]
         %td.text-center
-          - if j.restartable
+          - if j.restartable && j.publication
             .material-icons.bg-danger.text-white.restart{'data-toggle' => 'tooltip', 'data-placement' => 'top', title: t('tooltip.restart') }= link_to "cached", publication_restart_job_path(j.publication, j)
           - else
             .material-icons{class: "text-#{j.get_status[:class]}"}= j.get_status[:icon]
