--- a/app/views/publications/_publications_table.html.haml
+++ b/app/views/publications/_publications_table.html.haml
@@ -35,7 +35,7 @@
           %br
           = job[:message]
         %td.text-center
-          - if job.restartable
+          - if job.restartable && job.publication
             .material-icons.bg-danger.text-white.restart{'data-toggle' => 'tooltip', 'data-placement' => 'top', title: t('tooltip.restart') }= link_to "cached", publication_restart_job_path(job.publication, job)
           - else
-            .material-icons{class: "text-#{job.get_status[:class]}"}= job.get_status[:icon]
+            .material-icons{class: "text-#{job.get_status[:class]}", 'data-toggle' => 'tooltip', 'data-placement' => 'top', title: j.get_status[:tooltip] }= job.get_status[:icon]
