--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -3,5 +3,6 @@
 %link{ href: 'https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css', rel: 'stylesheet' }
 %link{ href: 'https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css', rel: 'stylesheet' }
 
+= render 'harvest_button'
 = render 'publications/publications_table' if @publications
 = render 'jobs_table' if @jobs
