--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -5,4 +5,4 @@
 
 = render 'harvest_button'
 = render 'publications/publications_table' if @publications
-= render 'jobs_table' if @jobs
+= render 'events_table' if @events
