--- a/app/views/publications/edit.html.haml
+++ b/app/views/publications/edit.html.haml
@@ -13,4 +13,4 @@
       - if @publication.ready_to_publish?
         = render 'publish_button'
       = render 'attached_files'
-      = render 'jobs'
+      = render 'events'
