--- a/app/views/publications/_events.html.haml
+++ b/app/views/publications/_events.html.haml
@@ -1,22 +1,22 @@
-.jobs
+.events
   %hr
   %h2 Processed Events
   .wrap-collapsible
-    - if @publication.jobs.count > 3
+    - if @publication.events.count > 3
       %input#collapsible.toggle{type: 'checkbox'}
       %label.lbl-toggle{for: 'collapsible'} Show All
     .collapsible-content
       .collapsible-inner
-        - @publication.jobs.order(updated_at: :desc).each do |j|
-          .job-row.container{ class: "#{j.restartable ? 'restartable bg-danger text-white' : ''}" }
+        - @publication.events.order(updated_at: :desc).each do |j|
+          .event-row.container{ class: "#{j.restartable ? 'restartable bg-danger text-white' : ''}" }
             .row.justify-content-end
               .col
-                .job-name= j[:name]
-              .job-icons
+                .event-name= j[:name]
+              .event-icons
                 - if j.user || j.cas_user
                   .badge.badge-primary=j.user.present? ? j.user.email : j.cas_user.email
                 - if j.restartable && j.publication
-                  .material-icons.bg-danger.text-white.restart{'data-toggle' => 'tooltip', 'data-placement' => 'top', title: t('tooltip.restart') }= link_to "cached", publication_restart_job_path(@publication, j)
+                  .material-icons.bg-danger.text-white.restart{'data-toggle' => 'tooltip', 'data-placement' => 'top', title: t('tooltip.restart') }= link_to "cached", publication_restart_event_path(@publication, j)
                 - else
                   .material-icons{class: "text-#{j.status_hash[:class]}", 'data-toggle' => 'tooltip', 'data-placement' => 'top', title: j.status_hash[:tooltip] }= j.status_hash[:icon]
             .row
