--- a/app/views/article_recruit_mailer/article_recruit_email.text.haml
+++ b/app/views/article_recruit_mailer/article_recruit_email.text.haml
@@ -1,4 +1,4 @@
-="Dear Author: Oregon State University Libraries invites you to deposit manuscript of recent publication for open access"
+= "Dear Author: Oregon State University Libraries invites you to deposit manuscript of recent publication for open access"
 \-------------------------------------------------
 
 - @publication.web_of_science_source_record.record.titles.each do |t|
@@ -6,4 +6,4 @@
   \-------------------------------------------------
 
 Attach manuscript with this link:
-= publication_url(@publication)
+= claim_url(@publication.web_of_science_source_record[:hashed_uid])
