--- a/app/views/publications/_publications_table.html.haml
+++ b/app/views/publications/_publications_table.html.haml
@@ -38,4 +38,4 @@
           - if event.restartable && event.publication
             .material-icons.bg-danger.text-white.restart{'data-toggle' => 'tooltip', 'data-placement' => 'top', title: t('tooltip.restart') }= link_to "cached", publication_restart_event_path(event.publication, event)
           - else
-            .material-icons{class: "text-#{event.status_hash[:class]}", 'data-toggle' => 'tooltip', 'data-placement' => 'top', title: j.status_hash[:tooltip] }= event.status_hash[:icon]
+            .material-icons{class: "text-#{event.status_hash[:class]}", 'data-toggle' => 'tooltip', 'data-placement' => 'top', title: event.status_hash[:tooltip] }= event.status_hash[:icon]
