allows admin to restart any job in the error state

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -13,5 +13,5 @@ $bs-gray-light: rgba(0, 0, 0, 0.125);
 $bs-orange: #f0ad4e;
 $success-green-dark: #2fab29;
 $success-green-light: #ddf8d7;
-$warn-yellow-dark: #c7c737;
+$warn-yellow-dark: #7d7d3f;
 $warn-yellow-light: #e6e358;
