extract all metadata and provide methods for surfacing this to the application crosswalks metadata to work fields for repository

--- a/app/views/article_recruit_mailer/recruit_email.html.haml
+++ b/app/views/article_recruit_mailer/recruit_email.html.haml
@@ -1,6 +1,6 @@
 %h2= "Dear Author: Oregon State University Libraries invites you to deposit manuscript of recent publication for open access"
 %hr
-- @publication.web_of_science_source_record.record.titles.each do |t|
+- @publication.web_of_science_source_record.record.title.each do |t|
   %h3= t
 
 Attach manuscript with this link:
