--- a/app/views/article_recruit_mailer/recruit_email.text.haml
+++ b/app/views/article_recruit_mailer/recruit_email.text.haml
@@ -1,7 +1,7 @@
 = "Dear Author: Oregon State University Libraries invites you to deposit manuscript of recent publication for open access"
 \-------------------------------------------------
 
-- @publication.web_of_science_source_record.record.titles.each do |t|
+- @publication.web_of_science_source_record.record.title.each do |t|
   = t
   \-------------------------------------------------
 
