--- a/app/views/publish_mailer/published_email.html.haml
+++ b/app/views/publish_mailer/published_email.html.haml
@@ -1,6 +1,6 @@
 %h2="Your work has been published by #{@user.email}"
 %hr
-- @publication.web_of_science_source_record.record.titles.each do |t|
+- @publication.web_of_science_source_record.record.title.each do |t|
   %h3= t
 
 Repository:
