--- a/app/views/publish_mailer/published_email.text.haml
+++ b/app/views/publish_mailer/published_email.text.haml
@@ -1,7 +1,7 @@
 ="Your work has been published by #{@user.email}"
 \-------------------------------------------------
 
-- @publication.web_of_science_source_record.record.titles.each do |t|
+- @publication.web_of_science_source_record.record.title.each do |t|
   = t
   \-------------------------------------------------
 
