--- a/app/views/publications/show.html.haml
+++ b/app/views/publications/show.html.haml
@@ -4,7 +4,8 @@
       = render 'record', r: @wos_record
     .col.col-12.col-lg-6
       = render 'attached_files'
-      = render 'events'
+      - if current_user.admin?
+        = render 'events'
 :javascript
   setTimeout(function() {
     window.location.reload();
